<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/nav_menu_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home">
    </item>
    <item
            android:id="@+id/nav_menu_inbox"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/menu_inbox">
    </item>
    <item
            android:id="@+id/nav_menu_transaction"
            android:icon="@drawable/ic_transform_black_24dp"
            android:title="@string/menu_transaction">
    </item>
    <item
            android:id="@+id/nav_menu_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart">
    </item>
    <item
            android:id="@+id/nav_menu_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_account">
    </item>
</menu>